--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,6 +1,18 @@
 <h2>Edit Historical Landmark</h2>
 
 <!-- add content here -->
+<form method="post" action="/landmarks/<%= @landmark.id %>">
+<input id="hidden" type="hidden" name="_method" value="patch">
+
+<label for="name">Name:</label>
+    <input type="text" id="name" name="landmark[name]" value="<%= @landmark.name %>" /><br>
+
+<label for="year">Year:</label>
+    <input type="text" id="year_completed" name="landmark[year_completed]" value="<%= @landmark.year_completed %>"/><br>
+
+    <input type="submit" value="Edit Landmark" />
+
+</form>
 
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
